initialize page layout

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -38,3 +38,11 @@
 //   "foundation/components/type",
 //   "foundation/components/offcanvas",
 //   "foundation/components/visibility";
+
+@import
+   "custom/animations",
+   "custom/type",
+   "custom/buttons",
+   "custom/forms",
+   "custom/modals",
+   "custom/global";
