--- a/scss/custom/_modals.scss
+++ b/scss/custom/_modals.scss
@@ -1,29 +1,22 @@
-html.modal-open {
-    overflow: hidden;
-    z-index: 999999999999;
-}
 .reveal-modal-bg {
 	background: rgba(0,0,0,0.8);
 }
 .reveal-modal{
 	border: none;
 	box-shadow: none;
+   position: absolute;
+   border-radius: 0;
 	.scrollable-content{
 		overflow-y: scroll;
 		height: 100%;
 		padding: 60px 0;
-	}
-	.wrapper {
-		text-align: center;
-		display: table-cell;
-		width: 100%;
-		vertical-align: middle;
 	}
 	a.close-reveal-modal {
 		top: 1.3rem;
 		right: 1.7rem;
 		font-size: 3rem;
       @include css-transition($fast-transition);
+      z-index: 999999999999;
       &:hover, &:active{
          color: $oil;
       }
@@ -35,4 +28,15 @@ html.modal-open {
 		.reveal-modal {
 		}
 	}
+}
+
+@media #{$medium-up}{
+   .reveal-modal{
+      border-radius: $global-radius;
+   }
+}
+@media #{$large-up}{
+   html.modal-open {
+       overflow: hidden;
+   }
 }
