pack button fixed

--- a/scss/custom/_global.scss
+++ b/scss/custom/_global.scss
@@ -105,6 +105,9 @@ footer{
    section{
       &#pack{
          padding-top: 120px;
+         h2{
+            padding-bottom: 30px;
+         }
       }
    }
 }
